# MixityReactDjangoWebApp

./: .gitignore
backend/: .pre-commit-config.yaml  Makefile  README.md  app_settings.py  conftest.py  generate-env.sh  generate-json.sh  project_settings.py  pyproject.toml  pytest.ini  setup.cfg
backend/api/: serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/models/: products.py
backend/backend/: settings.py  urls.py
backend/carrier/: serializers.py  urls.py
backend/carrier/migrations/: 0001_initial.py
backend/carrier/models/: __init__.py  carrier.py  driver.py  truck.py  truck_capacities.py  truck_capacity.py  truck_type.py
backend/carrier/schemas/: schema_carriers.py  schema_errors.py  schema_trucks.py
backend/carrier/serializers/: carrier_serializers.py  truck_serializers.py
backend/carrier/views/: carriers.py  trucks.py
backend/catalog/: apps.py  serializers.py  urls.py  views.py
backend/catalog/admin/: __init__.py  admins.py  product_admin.py
backend/catalog/api/: schema_urls.py  serializers.py  urls.py
backend/catalog/migrations/: 0001_initial.py  0002_product_for_web.py  0003_warehouse_pricehistory.py  0004_alter_appunit_title.py  0005_productpallet_alter_productspecification_options_and_more.py  0006_rename_pricehistory_purchasepricehistory_and_more.py  0007_alter_product_options_and_more.py  0008_productspecname_alter_descriptionitem_options_and_more.py  0009_alter_productspecification_options_and_more.py  0010_alter_purchasepricehistory_warehouse_and_more.py
backend/catalog/models/: __init__.py  carriers.py  description_item.py  drivers.py  group.py  order_items.py  orders.py  price_history.py  product.py  product_description.py  product_group.py  product_pallet.py  product_spec_name.py  product_specification.py  product_unit.py  product_units.py  products.py  specification_group.py  stocks.py  technical_description.py  truck_types.py  trucks.py  unit.py  units.py  warehouse.py
backend/contacts/: admin.py  factories.py  models.py  schema_urls.py  serializers.py  tests.py  urls.py  views.py
backend/contacts/migrations/: 0001_initial.py  0002_remove_contact_phone_number_phonenumber_contact.py  0003_alter_contact_email.py  0004_alter_phonenumber_phone_number.py  0005_contact_carrier_contact_warehouse_and_more.py
backend/core/fixtures/: django_groups_fixture.json  load_users.json
backend/core/openapi/: base_views.py  errors.py  schema_factories.py
backend/core/tests/: base_test_case.py  contracts.py  crud_tests.py  field_matching_tests.py  model_tests.py  type_stubs.py  utils.py  validation_tests.py  visibility_tests.py
backend/logistic/: schema_urls.py  urls.py
backend/logistic/admin/: __init__.py  carrier_admin.py  driver_admin.py  truck_admin.py
backend/stock/: admin.py  schema_urls.py  urls.py  warehouse_serializers.py
backend/swagger/: swagger.yaml
(+83 files in other folders)
